update expenses api
